--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <th>水</th>
       </tr>
       <tr>
-        <td>Aさん</td>
+        <td>SHさん</td>
         <td>○</td>
         <td>×</td>
         <td>○</td>
       </tr>
       <tr>
-        <td>Bさん</td>
+        <td>HYさん</td>
         <td>×</td>
         <td>×</td>
         <td>○</td>
